crates/oxc_react_compiler/tests/snapshots/object-expression-computed-key-object-mutated-later.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-computed-key-object-mutated-later.js
---
import { c as _c } from "react/compiler-runtime";
import { identity, mutate } from "shared-runtime";
function Component(props) {
	const $ = _c(2);
	let context;
	if ($[0] !== props.value) {
		const key = {};
		context = { [key]: identity([props.value]) };
		mutate(key);
		$[0] = props.value;
		$[1] = context;
	} else {
		context = $[1];
	}
	return context;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
