crates/oxc_react_compiler/tests/snapshots/object-expression-get-syntax.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-get-syntax.js
---
function Component(t0) {
	const { value } = t0;
	const t1 = { get value() {
		return value;
	} };
	const object = t1;
	const t2 = <div>{object.value}</div>;
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
