crates/oxc_react_compiler/tests/snapshots/object-expression-member-expr-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-member-expr-call.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Expected Identifier, got CallExpression key in ObjectExpression", labels: One([LabeledSpan { label: None, span: SourceSpan { offset: SourceOffset(171), length: 24 }, primary: false }]), help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
