crates/oxc_react_compiler/tests/snapshots/object-expression-set-syntax.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-set-syntax.js
---
function Component(props) {
	let value;
	const object = { set value(v) {
		value = v;
	} };
	object.value = props.value;
	let t0;
	{
		t0 = <div>{value}</div>;
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
