crates/oxc_react_compiler/tests/snapshots/object-literal-method-call-in-ternary-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-literal-method-call-in-ternary-test.js
---
import { createHookWrapper, identity, CONST_STRING0, CONST_STRING1 } from "shared-runtime";
function useHook(t0) {
	const { value } = t0;
	return { getValue() {
		return identity(value);
	} }.getValue() ? CONST_STRING0 : CONST_STRING1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{ value: 0 }]
};
