crates/oxc_react_compiler/tests/snapshots/object-literal-method-in-ternary-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-literal-method-in-ternary-test.js
---
import { createHookWrapper, CONST_STRING0, CONST_STRING1 } from "shared-runtime";
function useHook(t0) {
	const { value } = t0;
	return { getValue() {
		return identity(value);
	} } ? CONST_STRING0 : CONST_STRING1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: createHookWrapper(useHook),
	params: [{ value: 0 }]
};
